# eselect

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.bash  autogen.sh  configure.ac  configure.in
config/: ChangeLog  NEWS
config/doc/: Makefile.am  default.css  developer-guide.txt  user-guide.txt
config/libs/: config.bash.in  default.eclectic.in  multilib.bash.in  output.bash.in  tests.bash.in
config/man/: profile.eclectic.5
config/misc/: Makefile.am
config/modules/: Makefile.am  bashcomp.eclectic  blas.eclectic  config.eclectic  kernel.eclectic
doc/: Makefile.am  default.css  developer-guide.txt  overview.txt  release-guide.txt  user-guide.txt
libs/: Makefile.am  alternatives-common.bash.in  alternatives.bash.in  config.bash.in  core.bash.in  default.eclectic.in  default.eselect.in  editor-variable.bash.in  manip.bash.in  multilib.bash.in  output.bash.in  package-manager.bash.in  paludis.bash.in  path-manipulation.bash.in  portage.bash.in  skel.bash.in  tests.bash.in
man/: Makefile.am  bashcomp.eselect.5  binutils.eselect.5  blas.eclectic.5  blas.eselect.5  cblas.eselect.5  ctags.eselect.5  eclectic.1  editor.eselect.5  emacs.eselect.5  env.eselect.5  eselect.1  kernel.eselect.5  lapack.eclectic.5  lapack.eselect.5  mailer.eclectic.5  mailer.eselect.5  news-tng.eselect.5  news.eselect.5  opengl.eselect.5  package-manager.eselect.5  pager.eselect.5  profile-symlink.eclectic.5  profile.eclectic.5  profile.eselect.5  rc.eclectic.5  rc.eselect.5  visual.eselect.5
man-other/: cblas.eselect.5  ctags.eselect.5  opengl.eselect.5  package-manager.eselect.5
misc/: Makefile.am  eclectic.bashcomp  eselect-mode.el  eselect.bashcomp
modules/: Makefile.am  alternatives.eselect  bashcomp.eclectic  bashcomp.eselect  binutils.eselect  blas.eclectic  blas.eselect  cblas.eselect  compiler.eselect.in  config.eclectic  config.eselect  cow.eclectic  cow.eselect  ctags.eselect  editor.eselect  emacs.eselect  env.eselect  esd.eselect  fontconfig.eselect  java-nsplugin.eselect  java-vm.eselect  java.eselect  kernel.eclectic  kernel.eselect  lapack.eclectic  lapack.eselect  locale.eselect  mailer-symlink.eclectic  mailer.eclectic  mailer.eselect  modules.eselect  myspell.eselect  news-tng.eselect  news.eselect  oodict.eselect  opengl.eselect  oracle.eselect  package-manager.eselect  pager.eselect  profile-symlink.eclectic  (+13 more)
modules-other/: README  cblas.eselect  fontconfig.eselect  java-nsplugin.eselect  java-vm.eselect  lapack.eselect  myspell.eselect  oodict.eselect  oracle.eselect  tbirddict.eselect  timidity.eselect  vi.eselect  xvmc.eselect
