modulesdir=$(datadir)/$(PACKAGE_NAME)/modules/

modules_DATA = \
		 bashcomp.eselect \
		 binutils.eselect \
		 editor.eselect \
		 env.eselect \
		 kernel.eselect \
		 locale.eselect \
		 modules.eselect \
		 news.eselect \
		 pager.eselect \
		 profile.eselect \
		 rc.eselect \
		 visual.eselect

EXTRA_DIST = $(modules_DATA) \
		 cow.eselect

MAINTAINERCLEANFILES = Makefile.in
